apps/wallet/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html, body, #root {
  height: 100%;
  margin: 0;
  padding: 0;
}

*::-webkit-scrollbar {
  @apply w-[2px] h-[4px] bg-transparent;
}
*::-webkit-scrollbar-thumb {
  @apply rounded-full;
  background-color: color-mix(in oklch, currentColor 35%, transparent) transparent;
}

@layer components {
  .btn {
    @apply font-bold disabled:opacity-70 disabled:cursor-not-allowed;
  }
  .btn:not(.btn-primary,.btn-secondary,.btn-ghost,.btn-link,.btn-ex3-primary) {
    @apply bg-base-300 text-primary;
  }
  .btn-primary {
    @apply text-base-content;
  }
  .btn-sm:not(.btn-square,.btn-circle,.btn-link) {
    @apply h-10;
  }
  .btn-ex3-primary {
    @apply bg-primary/20 border border-primary/50 text-base-content hover:bg-primary/10 hover:border-primary/40
  }

  .input, .textarea {
    @apply placeholder:text-base-300;
  }
  .input:focus,.input:focus-within,.textarea:focus,.textarea:focus-within {
    outline: none;
  }
}

